--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["./www/components/*"]
+      "@components/*": ["./www/components/*"],
+      "@workers/*": ["./workers/*"]
     }
   },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.worker.json" }
   ]
 }
