--- a/tsconfig.worker.json
+++ b/tsconfig.worker.json
@@ -1,11 +1,12 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.node.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@workers/*": ["./workers/*"]
     },
-    "types": ["./worker-configuration.d.ts"]
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.worker.tsbuildinfo",
+    "types": ["vite/client", "./worker-configuration.d.ts"]
   },
   "include": ["workers"]
 }
