--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "deploy": "wrangler deploy",
     "typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
