--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore wrangler output file
+.wrangler
+
+# Environment variables
+.env
+.env.development
+.env.production
