--- a/tsconfig.worker.json
+++ b/tsconfig.worker.json
@@ -1,12 +1,8 @@
 {
   "extends": "./tsconfig.node.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@workers/*": ["./workers/*"]
-    },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.worker.tsbuildinfo",
     "types": ["vite/client", "./worker-configuration.d.ts"]
   },
-  "include": ["workers"]
+  "include": ["workers/**/*"]
 }
