--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "wrangler deploy",
-    "typegen": "wrangler types --env-interface CloudflareBindings"
+    "typegen": "wrangler types --env-interface CloudflareBindings",
+    "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts"
   },
   "dependencies": {
     "@hono/zod-openapi": "^1.2.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@scalar/hono-api-reference": "^0.9.30",
+    "drizzle-orm": "^0.45.1",
     "hono": "^4.11.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -26,6 +30,7 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
