--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hono/zod-openapi": "^1.2.0",
     "@neondatabase/serverless": "^1.0.2",
     "@scalar/hono-api-reference": "^0.9.30",
+    "better-auth": "1.3.34",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.1",
     "react": "^19.2.0",
