--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy": "wrangler deploy",
     "typegen": "wrangler types --env-interface CloudflareBindings",
     "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
-    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts"
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
+    "auth:schema:gen": "bun x @better-auth/cli@latest generate --config=./workers/libs/configure-better-auth.ts --output=./workers/database/schema.ts"
   },
   "dependencies": {
     "@hono/zod-openapi": "^1.2.0",
@@ -27,7 +28,7 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.19.0",
     "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.1",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
