--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "wrangler deploy",
-    "typegen": "wrangler types --env-interface CloudflareBindings",
+    "typegen": "wrangler types -c workers/www/wrangler.json --env-interface CloudflareBindings",
     "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
     "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
     "auth:schema:gen": "bun x @better-auth/cli@latest generate --config=./workers/libs/configure-better-auth.ts --output=./workers/database/schema.ts"
